css/modules/Container.less
.container-main {
	padding: 1px 1px 0px;
	margin-left: 300px;
	margin-top: 40px;
	overflow-y: scroll;
	overflow-x: hidden;
}

.search-results {
	// -webkit-transform: translate3d(-100%,0,0);
	// transform: translate3d(-100%,0,0);
	// opacity: 0;
}

.transition-in {
	.transform(translate3d(0,0%,0));
	opacity: 1;
}
.transition-out {
	.transform(translate3d(-100%,0%,0));
	opacity: 1;
}
.ui-autocomplete.ui-front {
	margin-top: 12px;
}

@media (max-width: 767px) {

	.container-main {
		margin-left: 0;
		margin-top: 80px;
		height: auto !important;
	}

}

